# iam-recon

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  pr-build.yml  release.yml
Formula/: iam-recon.rb
docs/screenshots/: demo.cast
src/: error.rs  lib.rs  main.rs
src/analysis/: findings.rs  mod.rs
src/cli/: analysis.rs  argquery.rs  colors.rs  completer.rs  graph.rs  mod.rs  orgs.rs  pathfinding_cmd.rs  policies_cmd.rs  query.rs  repl.rs  visualize.rs
src/edges/: autoscaling.rs  cloudformation.rs  codebuild.rs  ec2.rs  iam.rs  lambda.rs  mod.rs  sagemaker.rs  ssm.rs  sts.rs
src/gathering/: admin_check.rs  cache.rs  mod.rs  resource_policies.rs
src/model/: edge.rs  finding.rs  graph.rs  group.rs  mod.rs  node.rs  org_tree.rs  policy.rs  query_result.rs  report.rs
src/pathfinding/: mapper.rs  mod.rs  paths.rs
src/policy_eval/: authorization.rs  context_keys.rs  mod.rs  resource_policy.rs  statement_match.rs  wildcard.rs
src/policy_eval/condition/: arn_ops.rs  binary_ops.rs  bool_ops.rs  date_ops.rs  ip_ops.rs  mod.rs  null_ops.rs  numeric_ops.rs  string_ops.rs
src/querying/: mod.rs  query_actions.rs  query_interface.rs  query_orgs.rs  search.rs
src/querying/nlq/: ast.rs  cypher.rs  error.rs  executor.rs  fuzzy.rs  lexer.rs  llm.rs  mod.rs  parser.rs  saved.rs  synonyms.rs  templates.rs
src/querying/presets/: clusters.rs  connected.rs  endgame.rs  mod.rs  privesc.rs  serviceaccess.rs  wrongadmin.rs
src/tui/: mod.rs
src/util/: arns.rs  aws_config.rs  case_insensitive_map.rs  mod.rs  storage.rs
src/visualization/: dot_writer.rs  graphml_writer.rs  mod.rs
src/visualization/interactive/: mod.rs  risk.rs  server.rs
tests/: bench_compare.rs
