[package]
name = "iam-recon"
version = "0.1.0"
edition = "2021"
description = "AWS IAM privilege escalation and attack path mapper"
license = "Apache-2.0"

[[bin]]
name = "iam-recon"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = ">=4.5, <4.6", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
aws-sdk-lambda = "1"
aws-sdk-ec2 = "1"
aws-sdk-codebuild = "1"
aws-sdk-cloudformation = "1"
aws-sdk-autoscaling = "1"
aws-sdk-ssm = "1"
aws-sdk-sagemaker = "1"
aws-sdk-s3 = "1"
aws-sdk-sns = "1"
aws-sdk-sqs = "1"
aws-sdk-kms = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-organizations = "1"

# Regex for wildcard matching
regex = "1"

# IP address matching
ipnet = "2"

# Date parsing
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# GraphML XML output
quick-xml = "0.37"

# Misc
indexmap = { version = "2", features = ["serde"] }
unicase = "2"
dirs = "6"
urlencoding = "2"

# Interactive visualization server
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
open = "5"

# REPL
rustyline = "15"

# TUI
ratatui = "0.29"
crossterm = "0.28"
iam-rs = "0.1.0"

[build-dependencies]
serde_json = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
