[package]
name = "iam-recon"
version = "0.1.0"
edition = "2021"
description = "AWS IAM privilege escalation and attack path mapper"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/yourorg/iam-recon"
homepage = "https://github.com/yourorg/iam-recon"

[[bin]]
name = "iam-recon"
path = "src/main.rs"

# ── Debian package metadata (cargo-deb) ──────────────────────
# Build with:   cargo install cargo-deb && cargo deb --target x86_64-unknown-linux-gnu
# Output:       target/x86_64-unknown-linux-gnu/debian/iam-recon_<version>_amd64.deb
[package.metadata.deb]
maintainer = "IAM Recon Contributors"
copyright = "2026, IAM Recon Contributors <noreply@example.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
IAM Recon builds a directed graph of AWS IAM principals (users and roles)
and identifies privilege escalation vectors through 9 service-specific
edge checkers (IAM, STS, Lambda, EC2, CodeBuild, CloudFormation, AutoScaling,
SSM, SageMaker). Findings are automatically mapped to known attack paths
from Datadog's pathfinding.cloud database (bundled at build time).

Features: IAM policy simulation engine, natural-language queries, interactive
browser-based graph explorer, TUI dashboard, and export to JSON/CSV/OCSF/SVG/PDF.

Inspired by NCC Group's PMapper (now abandoned), F-Secure's awspx, and
Datadog's pathfinding.cloud.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/iam-recon", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/iam-recon/README.md", "644"],
    ["LICENSE", "usr/share/doc/iam-recon/copyright", "644"],
]

[dependencies]
# CLI
clap = { version = ">=4.5, <4.6", features = ["derive"] }

# Async runtime — trimmed from "full" to only what the binary actually uses
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "fs",
    "sync",
    "time",
    "signal",
    "process",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
aws-sdk-lambda = "1"
aws-sdk-ec2 = "1"
aws-sdk-codebuild = "1"
aws-sdk-cloudformation = "1"
aws-sdk-autoscaling = "1"
aws-sdk-ssm = "1"
aws-sdk-sagemaker = "1"
aws-sdk-s3 = "1"
aws-sdk-sns = "1"
aws-sdk-sqs = "1"
aws-sdk-kms = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-organizations = "1"

# Regex for wildcard matching
regex = "1"

# IP address matching
ipnet = "2"

# Date parsing
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# GraphML XML output
quick-xml = "0.37"

# Misc
indexmap = { version = "2", features = ["serde"] }
unicase = "2"
dirs = "6"
urlencoding = "2"

# Interactive visualization server
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
open = "5"

# REPL
rustyline = "15"

# TUI
ratatui = "0.29"
crossterm = "0.28"
iam-rs = "0.1.0"

# Fuzzy matching for action/principal names
strsim = "0.11"

# HTTP client for LLM API backends (opt-in at runtime via --llm flag)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
serde_json = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

# ── Build profiles ───────────────────────────────────────────────
# Default release stays maximally optimized. A separate `ci` profile trades
# a bit of final binary speed for much faster build parallelism.
[profile.release]
codegen-units = 16
lto = false
strip = "symbols"

# CI-tuned profile: use `cargo build --profile ci` in GitHub Actions to cut
# codegen time by ~30-60s via aggressive parallelism. Binary is slightly larger
# and slightly less optimized but still plenty fast for a CLI tool.
[profile.ci]
inherits = "release"
codegen-units = 256
debug = 0
lto = false
strip = "symbols"

# Faster dev builds — less optimization, less debug info
[profile.dev]
debug = 1
incremental = true
